Things are in place

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,27 @@
-<h1>
-  {{title}}
-</h1>
+<div container>
+  <h1>Weather data</h1>
+  <div row>
+    <div column="4">
+      <button>Previous day</button>
+    </div>
+    <div column="4" class="today">
+      Today
+    </div>
+    <div column="4" class="next">
+      <button>Next day</button>
+    </div>
+  </div>
+  <div container class="center">
+      <div row class="temperature">
+          32°C
+      </div>
+      <div row>
+          <div column="6">
+              Rain?
+          </div>
+          <div column="6">
+              Description
+          </div>
+      </div>
+  </div>
+</div>
