--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,5 +1,5 @@
 <div container>
-  <h1>Weather data</h1>
+  <h1>Weather data<div class="spinner" *ngIf="loading$ | async"></div></h1>
   <div row>
     <div column="4">
       <button (click)="dayChanges$.next(-1)">{{previousDate$ | async | date:'longDate'}}</button>
